--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   },
   "engines": {
     "node": ">=14"
