--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fastest-levenshtein": "^1.0.16",
     "nodemon": "^2.0.22"
   },
   "engines": {
