--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "express-hello-world",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
-  "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
-  "license": "MIT",
-  "private": false,
+  "description": "",
+  "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon src/server.js",
     "start": "node src/server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "@extra-string/euclidean-distance": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fastest-levenshtein": "^1.0.16",
+    "fuse.js": "^6.6.2",
     "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=14"
   }
 }
